@@ -77,11 +77,8 @@ public interface HBaseRPCProtocolVersion extends VersionedProtocol {
    * <li>Version 23: HBASE-2066, multi-put.</li>
    * <li>Version 24: HBASE-2473, create table with regions.</li>
    * <li>Version 25: Added openRegion and Stoppable/Abortable to API.</li>
-   * <li>Version 26: New master.</li>
-   * REVERTED TO 25 TEMPORARILY -- TESTTABLEMAPREDUCE IS FAILING WITH
-   * HBaseRPC$VersionMismatch: Protocol org.apache.hadoop.hbase.ipc.HRegionInterface version mismatch. (client = 26, server = 25)
-   * ON HUDSON.
+   * <li>Version 26: New master and Increment, 0.90 version bump.</li>
    * </ul>
    */
-  public static final long versionID = 25L;
+  public static final long versionID = 26L;
 }
